@@ -1,3 +1,7 @@
+2011-04-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* truncate long proof commands
+
 2011-04-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix undo for unaffected proofs
